syntax = "proto3";

package belanda.service;

option java_multiple_files = true;
option java_package = "net.kafji.belanda";
option java_outer_classname = "BelandaProto";

service HelloService {
  rpc hello (HelloMessage) returns (HelloReply) {}
}

message HelloMessage {
  string name = 1;
}

message HelloReply {
  string greeting = 1;
}
